Added an optional attribute to task, also added NOT_RELEVANT as a new fulfilment status
