# src/test/resources/api/openapi.yaml
@@ -5,9 +5,9 @@ info:
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "1.1"
+  version: "1.2"
 servers:
-  - url: http://localhost:57753
+  - url: http://localhost:58766
     description: Generated server url
 tags:
   - name: Phase resources
@@ -3191,6 +3191,12 @@ components:
             - joe01doe
           minLength: 1
           writeOnly: true
+        optional:
+          type: boolean
+          default: false
+          description: Indicates if the task is optional or not
+          examples:
+            - "true"
       required:
         - createdBy
         - heading
@@ -3361,6 +3367,12 @@ components:
           examples:
             - joe01doe
           readOnly: true
+        optional:
+          type: boolean
+          description: Indicates if the task is optional or not
+          examples:
+            - "true"
+          readOnly: true
     OrganizationUpdateRequest:
       type: object
       description: Model for organizational unit update request
@@ -3522,6 +3534,7 @@ components:
         - EMPTY
         - "TRUE"
         - "FALSE"
+        - NOT_RELEVANT
     EmployeeChecklistTask:
       type: object
       description: Model for a employee checklist task
@@ -3750,6 +3763,11 @@ components:
             - joe01doe
           minLength: 1
           writeOnly: true
+        optional:
+          type: boolean
+          description: Indicates if the task is optional or not
+          examples:
+            - "true"
       required:
         - updatedBy
     Correspondence:
